inn and company name params

--- a/resources/config.edn.example
+++ b/resources/config.edn.example
@@ -13,6 +13,8 @@
               {
                :bills [2601911 2601912]                     ; список billId для генерации строк
                :multiple? true                              ; одна платежка на несколько счетов если true, дефолт false
+               :inn                                         ; кастомный inn
+               :company-name                                ; кастомное название компании
                :subject "Оплата по договору 1231234/11"     ; кастомный заголовок платежки, дефолт "Оплата по договору billUid"
                :include-uid? false                          ; включать ли billUid в заголовок платежки, дефолт true
                }
